salesforce/metadata/objects/EZB__c.object
<CustomObject>
    <label>EZB Exchange Rate</label>
    <nameField>
        <displayFormat>EZB-{0000}</displayFormat>
        <label>Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EZB Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CurrencyPair__c</fullName>
        <description>Currency pair code (e.g., EUR/USD)</description>
        <externalId>true</externalId>
        <label>Currency Pair</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Exchange rate value</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Date when this rate is effective</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdated__c</fullName>
        <description>Timestamp of last update</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Data source (e.g., ECB API)</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>